# python-fastapi

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __main__.py
