[project]
name = "python-fastapi"
version = "0.1.0"
authors = [
  {name = "Pascal Martineau", email = "pascal@lewebsimple.ca"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pip-tools",
]

[project.urls]
"Homepage" = "https://github.com/lewebsimple/python-fastapi"

[project.scripts]
app = "app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
